# ExtendedLib

./: .gitignore  CMakeLists.txt  LICENSE.txt  appveyor.yml  prepare-build.bat
ci/: appveyor_ci_build.ps1  appveyor_ci_test.ps1
cmake/Modules/: DebianPackage.cmake
debian/: copyright  package_description
lib/: CMakeLists.txt  DocsTargets.cmake  InstallersSetup.cmake
lib/doxygen/: chm.doxyfile.in  html.doxyfile.in  pdf.doxyfile.in
lib/include/Extended/: broadcaster.hpp  byte_vector.hpp  callback.hpp  callback_dispatcher.hpp  defs.hpp  dispatched_callback.hpp  format_string.hpp  log.hpp  log_common.hpp  memory.hpp  runtime_error.hpp  shared_ptr.hpp  string.hpp  thread.hpp
lib/include/Extended/msw/: callback_dispatcher.hpp
lib/include/ExtendedLib/: broadcaster.h  byte_vector.h  callback.h  callback_dispatcher.h  defs.h  dispatched_callback.h  format_string.h  log.h  log_common.h  memory.h  runtime_error.h  shared_lib.h  shared_ptr.h  thread.h
lib/include/ExtendedLib/msw/: callback_dispatcher.h
lib/sources/: format_string.cpp  local_log.h  local_log.hpp  log.cpp  runtime_error.cpp  string.cpp
lib/sources/msw/: callback_dispatcher.cpp  helpers.cpp  helpers.h  helpers.hpp  thread.cpp
lib/templates/: Config.hpp.in
test/: CMakeLists.txt  CommonTestTargets.cmake  GenerateTest.cmake  TestMain.cpp
test/broadcaster/: CMakeLists.txt  broadcaster_test.cpp
test/callback/: CMakeLists.txt  callback_test.cpp
test/callback_dispatcher_msw/: CMakeLists.txt  callback_dispatcher_test.cpp
test/dispatched_callback/: CMakeLists.txt  dispatched_callback_test.cpp
test/format_string/: CMakeLists.txt  format_string_test.cpp
test/log/: CMakeLists.txt  log_test.cpp
test/mocks/: log_mock.cpp  runtime_error_mock.cpp  win32_os_mock.cpp
test/runtime_error/: CMakeLists.txt  runtime_error_test.cpp
test/string/: CMakeLists.txt  string_test.cpp
